📃Doc update name

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnectionString": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=EFAutoObjToSql.Program+BloggingContext129;Integrated Security=True"
+    "DatabaseConnectionString": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=EFAutoObjToSql;Integrated Security=True"
   }
 }
